# CADR

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/HelloQtWindow/: CMakeLists.txt  VulkanWindow.cpp  VulkanWindow.h  main.cpp  shader.frag  shader.vert
examples/OpenGLInteroperability/: CMakeLists.txt  main.cpp  merge.frag  merge.vert  twoTriangles.vert
examples/RenderingPerformance/: CMakeLists.txt  Tests.cpp  Tests.h  main.cpp  shader-performance.frag  shader-picking.frag  shader.frag  shader.vert
examples/Text/: CMakeLists.txt  GuiMacros.cmake  VulkanWindow.h  main.cpp
examples/VulkanAttributesAndUniforms/: CMakeLists.txt  main.cpp  shader.frag  shader.vert
examples/VulkanComputeShader/: CMakeLists.txt  FindVulkan.cmake  main.cpp  shader.comp
examples/VulkanComputeShader/text-cz/: make-zip.sh
examples/VulkanDepthBuffer/: CMakeLists.txt  main.cpp
examples/VulkanDynamicFuncs/: CMakeLists.txt  main.cpp
examples/VulkanHelloTriangle/: CMakeLists.txt  main.cpp
examples/VulkanInfo/: CMakeLists.txt  main.cpp
examples/VulkanOffscreenRendering/: CMakeLists.txt  main.cpp  shader.vert
examples/VulkanRenderingPerformance/: CMakeLists.txt  attributelessConstantOutput.vert  attributelessInputIndices.vert  bufferAttribute.vert  constantColor.frag  coordinate3Buffer.vert  fourAttributes.vert  fourAttributesNoMatrix.vert  fourBuffer3.vert  fourBuffers.vert  fourInterleavedBuffers.vert  fourPackedAttributes.vert  fourPackedBuffers.vert  fullscreenQuad.vert  fullscreenQuadFourFlatInterpolators.frag  fullscreenQuadFourInterpolators.vert  fullscreenQuadFourSmoothInterpolators.frag  fullscreenQuadTexturedPhongInterpolators.frag  fullscreenQuadTexturedPhongInterpolators.vert  fullscreenQuadTwoVec3Interpolators.vert  geometryShader.geom  geometryShader.vert  geometryShaderConstantOutput.geom  geometryShaderConstantOutput.vert  geometryShaderConstantOutputTwoTriangles.geom  geometryShaderNoOutput.geom  main.cpp  matrixAttribute.vert  matrixBuffer.vert  passThrough.vert  phongNoSpecular.frag  phongNoSpecularSingleUniform.frag  phongTextured.frag  phongTextured.vert  phongTexturedDMatrices.vert  phongTexturedDMatricesDVertices.vert  phongTexturedDMatricesOnlyInput.vert  phongTexturedDummy.frag  phongTexturedFourAttributes.vert  phongTexturedFourAttributesFiveMatrices.vert  (+36 more)
examples/VulkanTutorial/: CMakeLists.txt
examples/VulkanTutorial/01-deviceList/: CMakeLists.txt  main.cpp
examples/VulkanTutorial/03-funcPointers/: CMakeLists.txt  main.cpp
examples/VulkanTutorial/03-simpleImage/: CMakeLists.txt
examples/VulkanTutorial/04-deviceInfo/: CMakeLists.txt  main.cpp
examples/VulkanTutorial/05-commandSubmission/: CMakeLists.txt  main.cpp
examples/VulkanTutorial/05-simpleImage/: CMakeLists.txt  main.cpp
examples/VulkanTutorial/06-simpleImage/: CMakeLists.txt  main.cpp
examples/VulkanTutorial/07-helloTriangle/: CMakeLists.txt  main.cpp
examples/VulkanTutorial/07-robustImage/: CMakeLists.txt  main.cpp
examples/VulkanTutorial/08-helloTriangle/: CMakeLists.txt  FindVulkan.cmake  main.cpp  shader.frag  shader.vert
examples/glTFreader/: CMakeLists.txt  main.cpp
examples/gltfReader/: CMakeLists.txt  GuiMacros.cmake  PipelineLibrary.cpp  PipelineLibrary.h  StbImageImplementation.cpp  VulkanWindow.cmake  VulkanWindow.cpp  VulkanWindow.h  Window.cpp  Window.h  main.cpp
examples/gltfReader/shaders/: baseColorUberShader.frag  baseColorUberShader.vert  compose.frag  coordinates.vert  fullScreenTriangle.vert  phongUberShader.frag  phongUberShader.vert  unspecifiedMaterial.frag
examples/tut01-deviceList/: CMakeLists.txt  main.cpp
examples/tut01-deviceList/text-cz/: FindVulkan.cmake  make-zip.sh  text.html
examples/tut02-funcPointers/: CMakeLists.txt  main.cpp
examples/tut02-vulkanInfo/: CMakeLists.txt  main.cpp
examples/tut03-helloWindowWin/: CMakeLists.txt  main.cpp
examples/tut03-helloWindowX11/: CMakeLists.txt  main.cpp
examples/tut03-simpleImage/: CMakeLists.txt  main.cpp
examples/tut04-robustImage/: CMakeLists.txt  main.cpp
examples/tut04-swapChain/: CMakeLists.txt  main.cpp
examples/tut05-helloTriangle/: CMakeLists.txt  main.cpp
examples/tut05-resizableWindow/: CMakeLists.txt  main.cpp
examples/tut06-helloTriangle/: CMakeLists.txt  main.cpp
src/CADR/: AttribStorage.h  CMakeLists.txt  DrawCommand.cpp  DrawCommand.h  Drawable.h  Export.h  Factory.cpp  Factory.h  Geode.h  PrimitiveSet.h  Renderer.cpp  Renderer.h
src/CadPL/: CMakeLists.txt  PipelineLibrary.cpp  PipelineLibrary.h  PipelineSceneGraph.cpp  PipelineSceneGraph.h  ShaderGenerator.cpp  ShaderGenerator.h  ShaderLibrary.cpp  ShaderLibrary.h  UberShader.frag  UberShader.geom  UberShader.vert  UberShaderInterface.glsl  UberShaderPoints.frag  UberShaderPoints.vert  UberShaderReadFuncs.glsl
src/CadR/: AllocationManagers.cpp  AllocationManagers.h  AttribConfig.h  AttribSizeList.h  AttribStorage.cpp  AttribStorage.h  BoundingBox.h  BoundingSphere.h  Buffer.h  BufferData.h  CADRConfig.cmake.in  CMakeLists.txt  CadR.cpp  CadR.h  CallbackList.h  CircularAllocationMemory.h  DataAllocation.cpp  DataAllocation.h  DataMemory.cpp  DataMemory.h  DataStorage.cpp  DataStorage.h  DrawCommand.h  Drawable.cpp  Drawable.h  Errors.h  Exceptions.h  FrameInfo.h  Geometry.cpp  Geometry.h  GeometryMemory.cpp  GeometryMemory.h  GeometryStorage.cpp  GeometryStorage.h  HandleTable.cpp  HandleTable.h  ImageAllocation.cpp  ImageAllocation.h  ImageMemory.cpp  ImageMemory.h  (+39 more)
src/CadR/shaders/: processDrawCommands.comp  processDrawables.comp
src/CadText/: CMakeLists.txt  SdfTextRenderer.cpp  SdfTextRenderer.h  TessellationShadersTextRenderer.cpp  TessellationShadersTextRenderer.h  TextRenderer.cpp  TextRenderer.h  TriangulationTextRenderer.cpp  TriangulationTextRenderer.h  WindingNumberTextRenderer.cpp  WindingNumberTextRenderer.h
src/CadText/shaders/: curve.frag  curve.tesc  curve.tese  curve.vert  sdf.frag  sdf.vert  triangle.frag  (+3 more)
tests/: CMakeLists.txt  DataAllocationTest.cpp  ParentChildTest.cpp  VulkanDeviceAndInstance.cpp  VulkanDeviceAndInstanceTest.cpp
(+40 files in other folders)
